@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2020/07/04    1.3.1     Always clean namespaces when converting, to assist Glossary import plugin.
 2020/07/04    1.3.0     Refactored Word to XHTML conversion into a class, for re-use elsewhere.
 2018/12/09    1.2.8     Fix erroneous behaviour during Behat testing.
 2018/08/06    1.2.7     Fix get_reason declaration in Privacy API code to make it more compatible with PHP 5/7.
